Corrected names for install_github

--- a/README.Rmd
+++ b/README.Rmd
@@ -29,7 +29,7 @@ In the package there are 3 exemplificative files of how the data looks like and 
 You can install the released version of fars from [GitHub](https://github.com/) with:
 
 ``` r
-install_github("nome da inserire", build_vignettes = TRUE)
+install_github("veronicavedovetto/fars", build_vignettes = TRUE)
 ```
 
 ## How to use fars
