--- a/README.Rmd
+++ b/README.Rmd
@@ -17,6 +17,7 @@ knitr::opts_chunk$set(
 
 
 <!-- badges: start -->
+[![Travis build status](https://travis-ci.org/veronicavedovetto/building_R_packages_final_assignment.svg?branch=master)](https://travis-ci.org/veronicavedovetto/building_R_packages_final_assignment)
 <!-- badges: end -->
 
 The goal of fars is to provide some functions to analyse data from the [US National Highway Traffic Safety Administration's Fatality Analysis Reporting System](https://www.nhtsa.gov/research-data), which is a nationwide census providing the American public yearly data regarding fatal injuries suffered in motor vehicle traffic crashes.
